# module_mediaplayer

./: .gitignore  README.md  app-release.apk  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/libs/: lib_leanback_r1-2-0-alpha02-release.aar  lib_mediaplayer_ijk-k0.8.8-ff4.0-lite_release_20220908.aar  lib_mediaplayer_ijk-k0.8.8-ff4.0-lite_release_20221029.aar  lib_mediaplayer_ijk-k0.8.8-ff4.0-lite_release_20221031.aar  lib_mediaplayer_ijk_k0.8.8_ff3.4.12_release_20230517.aar  lib_mediaplayer_ijk_k0.8.8_ff3.4_openssl_release_20230511.aar  lib_mediaplayer_ijk_k0.8.8_ff3.4_release_20230421.aar  lib_mediaplayer_ijk_k0.8.8_ff3.4_release_20230422.aar  lib_mediaplayer_ijk_k0.8.8_ff3.4_release_20230511.aar  lib_mediaplayer_ijk_sxgd_release_20230421.aar  lib_mediaplayer_ijkplayer-k0.8.8-ff4.0-lite_release_20220628.aar  lib_mediaplayer_ijkplayer-k0.8.8-ff4.0_release_20220216.aar  lib_mediaplayer_ijkplayer_release_20220216.aar  lib_mediaplayer_r2.11.8_release_20210520.aar  lib_mediaplayer_r2.14.0_release_20210521.aar  lib_mediaplayer_r2.14.0_release_20210525.aar  lib_mediaplayer_r2.14.0_release_20210729.aar  lib_mediaplayer_r2.14.0_release_20210819.aar  lib_mediaplayer_release_20210512.aar  lib_mediaplayer_release_20210518.aar  lib_mediaplayer_release_20210519.aar  lib_mediaplayer_ui_release_20210923.aar  lib_mediaplayer_ui_release_20210927.aar  lib_mediaplayer_ui_release_20211215.aar  lib_mediaplayer_ui_release_20211219.aar  lib_mediaplayer_ui_release_20220211.aar  lib_mediaplayer_ui_release_20220214.aar  lib_mediaplayer_ui_release_20220215.aar  lib_mediaplayer_ui_release_20220216.aar  lib_mediaplayer_ui_release_20220218.aar  lib_mediaplayer_ui_release_20220220.aar  lib_mediaplayer_ui_release_20220221.aar  lib_mediaplayer_ui_release_20220222.aar  lib_mediaplayer_ui_release_20220224.aar  lib_mediaplayer_ui_release_20220301.aar  lib_mediaplayer_ui_release_20220303.aar  lib_mediaplayer_ui_release_20220409.aar  lib_mediaplayer_ui_release_20220629.aar  lib_mediaplayer_ui_release_20220719.aar  lib_mediaplayer_ui_release_20220721.aar  (+56 more)
gradle/wrapper/: gradle-wrapper.properties
lib_exoplayer_source_r2.11.8/: build.gradle
lib_exoplayer_source_r2.14.0/: build.gradle
lib_exoplayer_source_r2.14.0_mediiaplayer_aar/: build.gradle
lib_exoplayer_source_r2.15.0/: build.gradle
lib_exoplayer_source_r2.15.0/libs/: exoplayer-rtsp-2.15.0.aar
lib_exoplayer_source_r2.15.0_mediiaplayer_aar/: build.gradle
lib_mediaplayer_aar/: build.gradle
lib_mediaplayer_aar/libs/: exoplayer-extension-rtmp-2.13.3.aar
lib_mediaplayer_core_exo_r2.18.0/: build.gradle
lib_mediaplayer_core_exo_r2.18.0/repo/: exoplayer-database-2.18.0.aar  exoplayer-datasource-2.18.0.aar  exoplayer-decoder-2.18.0.aar
lib_mediaplayer_core_exo_r2.18.2/: build.gradle  proguard-rules.pro
lib_mediaplayer_core_exoplayer_r2.14.0/: build.gradle
lib_mediaplayer_core_exoplayer_r2.15.0/: build.gradle
lib_mediaplayer_core_exoplayer_r2.15.0/libs/: exoplayer-extension-rtmp-2.15.0.aar
lib_mediaplayer_core_exoplayer_r2.16.1/: build.gradle
lib_mediaplayer_core_exoplayer_r2.16.1/libs/: exoplayer-decoder-2.16.1.module
lib_mediaplayer_core_exoplayer_r2.18.0/: build.gradle
lib_mediaplayer_core_exoplayer_r2.18.0/libs/: exoplayer-common-2.18.0.aar  exoplayer-extractor-2.18.0.aar  exoplayer-hls-2.18.0.aar  exoplayer-smoothstreaming-2.18.0.aar  exoplayer-ui-2.18.0.aar  (+1 more)
lib_mediaplayer_core_ffmpeg/: build.gradle
lib_mediaplayer_core_ijk_k0.8.8_ff4.0/: build.gradle  proguard-rules.pro
lib_mediaplayer_core_ijk_k0.8.8_ff4.0_full/: build.gradle
lib_mediaplayer_core_ijk_k0.8.8_ff4.0_lite/: build.gradle
lib_mediaplayer_core_ijk_k0.8.8_ff4.0_temp/: build.gradle
lib_mediaplayer_core_ijkplayer/: CMakeLists.txt  build.gradle
lib_mediaplayer_core_ijkplayer_k0.8.8_ff3.2/: CMakeLists.txt  build.gradle
lib_mediaplayer_core_ijkplayer_k0.8.8_ff4.0/: build.gradle
lib_mediaplayer_core_ijkplayer_k0.8.8_ff4.0_full/: build.gradle
lib_mediaplayer_core_ijkplayer_k0.8.8_ff4.0_lite/: build.gradle
lib_mediaplayer_core_vlc_r1/: build.gradle
lib_mediaplayer_core_vlc_r3.4.9/: build.gradle
lib_mediaplayer_exo_r1.5.15/: build.gradle
lib_mediaplayer_exo_r2.18.2_ff4.4_audio/: build.gradle
lib_mediaplayer_exo_r2.18.2_ff4.4_video/: build.gradle  proguard-rules.pro
lib_mediaplayer_exo_r2.18.3_ff4.4_audio/: build.gradle
lib_mediaplayer_exo_r2.18.3_ff4.4_video/: build.gradle
lib_mediaplayer_exo_r2.18.5/: build.gradle
lib_mediaplayer_exo_r2.18.5_ff4.4_audio/: build.gradle
lib_mediaplayer_exo_r2.18.6/: build.gradle
lib_mediaplayer_ffplayer_ff4.0/: build.gradle
lib_mediaplayer_ffplayer_ff4.0_openssl/: build.gradle
lib_mediaplayer_ffplayer_ff4.0_openssl/src/main/cpp/: CMakeLists.txt
lib_mediaplayer_ffplayer_ff4.0_openssl/src/main/cpp/player/: ffplayer_api.cpp
lib_mediaplayer_ffplayer_r1/: build.gradle
lib_mediaplayer_ffplayer_r1/src/main/cpp/: CMakeLists.txt
lib_mediaplayer_ffplayer_r1/src/main/cpp/SDL/: Android.mk
lib_mediaplayer_ijk_k0.8.8_ff3.4/: build.gradle
lib_mediaplayer_ijk_k0.8.8_ff3.4_openssl/: build.gradle
lib_mediaplayer_ijk_k0.8.8_ff4.0/: build.gradle
lib_mediaplayer_ijk_k0.8.8_ff4.0_openssl/: build.gradle
lib_mediaplayer_ijk_sxgd/: build.gradle
lib_mediaplayer_musickernel/: build.gradle
lib_mediaplayer_source/: build.gradle
lib_mediaplayer_ui/: build.gradle
lib_mediaplayer_videocache/: build.gradle
lib_mediaplayer_videodb/: build.gradle
lib_mediaplayer_videofloat/: build.gradle
lib_mediaplayer_videokernel/: build.gradle
lib_mediaplayer_videom3u8/: build.gradle
lib_mediaplayer_videoui/: build.gradle
lib_mediaplayer_vlc_r3.4.9/: build.gradle
lib_mediaplayer_vlc_r3.5.1/: build.gradle
module_mediaplayer_videocache/: build.gradle
module_mediaplayer_videodb/: build.gradle
module_mediaplayer_videofloat/: build.gradle
module_mediaplayer_videoui/: build.gradle
readme_md/: 03.视频播放器Api说明.md  06.播放器UI抽取封装.md  30.视频播放器使用设计模式.md
readme_source/: lib_exoplayer_source_r2-11-8_20210519.rar
repo/: lib_mediaplayer_core_exo_jar.rar
(+1864 files in other folders)
